@@ -94,7 +94,7 @@ class IsotopeCart extends IsotopeProductCollection
 
 				if (FE_USER_LOGGED_IN)
 				{
-					$objAddress = $this->Database->prepare("SELECT * FROM tl_iso_addresses WHERE pid=? AND isDefaultBilling='1'")->limit(1)->execute($this->User->id);
+					$objAddress = $this->Database->prepare("SELECT * FROM tl_iso_addresses WHERE pid={$this->User->id} AND store_id={$this->Isotope->Config->store_id} AND isDefaultBilling='1'")->limit(1)->execute();
 
 					if ($objAddress->numRows)
 						return $objAddress->fetchAssoc();
@@ -128,7 +128,7 @@ class IsotopeCart extends IsotopeProductCollection
 
 				if (FE_USER_LOGGED_IN)
 				{
-					$objAddress = $this->Database->prepare("SELECT * FROM tl_iso_addresses WHERE pid=? AND isDefaultShipping='1'")->limit(1)->execute($this->User->id);
+					$objAddress = $this->Database->prepare("SELECT * FROM tl_iso_addresses WHERE pid={$this->User->id} AND store_id={$this->Isotope->Config->store_id} AND isDefaultShipping='1'")->limit(1)->execute();
 
 					if ($objAddress->numRows)
 						return $objAddress->fetchAssoc();
