@@ -43,6 +43,7 @@ Version 0.3.beta1
 - Improved: Blair has rewritten Authorize.net's payment calls
 - Improved: Related products & quick products now use the product tree and allow for variant selection
 - Improved: All product collections can be printed to HTML/PDF
+- Improved: Addresses are now linked to the store config ID
 - Fixed start & stop publishing dates not working
 - Fixed Authorize.net failed transaction bug
 - Fixed enter key trapping on checkout payment method
